[gd_scene load_steps=4 format=2]

[ext_resource path="res://Unit.gd" type="Script" id=1]
[ext_resource path="res://images/units/archer.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]

[node name="Unit" type="Area2D"]
script = ExtResource( 1 )
unit_name = "Bob"

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2( 16, 16 )
scale = Vector2( 1.5, 1.5 )
shape = SubResource( 1 )

[node name="UnitSprite" type="Sprite" parent="."]
position = Vector2( 16, 16 )
scale = Vector2( 0.66, 0.66 )
z_index = 1
texture = ExtResource( 2 )
[connection signal="mouse_entered" from="." to="." method="_on_PlayerUnit_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_PlayerUnit_mouse_exited"]
