[gd_scene load_steps=11 format=2]

[ext_resource path="res://scripts/Unit.gd" type="Script" id=1]
[ext_resource path="res://images/units/boss_skull.png" type="Texture" id=2]
[ext_resource path="res://scenes/combat/Cursor.tscn" type="PackedScene" id=3]
[ext_resource path="res://images/units/archer.png" type="Texture" id=4]
[ext_resource path="res://images/ui/unit_team_indicator.png" type="Texture" id=5]

[sub_resource type="RectangleShape2D" id=1]

[sub_resource type="Animation" id=2]
resource_name = "Attacking"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("UnitSprite:position")
tracks/0/interp = 2
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.5 ),
"transitions": PoolRealArray( 0.217638, 1, 0.217638 ),
"update": 0,
"values": [ Vector2( 16, 8 ), Vector2( 30, 8 ), Vector2( 16, 8 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "Attacking"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("UnitSprite:position")
tracks/0/interp = 2
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.5 ),
"transitions": PoolRealArray( 0.217638, 1, 0.217638 ),
"update": 0,
"values": [ Vector2( 16, 8 ), Vector2( 16, -8 ), Vector2( 16, 8 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "Attacking"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("UnitSprite:position")
tracks/0/interp = 2
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.5 ),
"transitions": PoolRealArray( 0.217638, 1, 0.217638 ),
"update": 0,
"values": [ Vector2( 16, 8 ), Vector2( 16, 24 ), Vector2( 16, 8 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "Attacking"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("UnitSprite:position")
tracks/0/interp = 2
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.5 ),
"transitions": PoolRealArray( 0.217638, 1, 0.217638 ),
"update": 0,
"values": [ Vector2( 16, 8 ), Vector2( 0, 8 ), Vector2( 16, 8 ) ]
}

[node name="Unit" type="Area2D" groups=[
"units",
]]
position = Vector2( 16, -8 )
script = ExtResource( 1 )
unit_name = "Bob"

[node name="BossSkull" type="Sprite" parent="."]
position = Vector2( 23.6017, 23.9514 )
z_index = 6
texture = ExtResource( 2 )

[node name="SelectionCursor" parent="." instance=ExtResource( 3 )]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2( 16, 16 )
scale = Vector2( 1.5, 1.5 )
shape = SubResource( 1 )

[node name="UnitSprite" type="Sprite" parent="."]
position = Vector2( 16, 8 )
scale = Vector2( 0.66, 0.66 )
z_index = 5
texture = ExtResource( 4 )

[node name="TeamIndicator" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.427451 )
position = Vector2( 16, -20 )
scale = Vector2( 0.125, 0.125 )
z_index = 11
texture = ExtResource( 5 )

[node name="MoveIndicator" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.427451 )
position = Vector2( 16, -42.55 )
scale = Vector2( 0.125, 0.125 )
z_index = 11
texture = ExtResource( 5 )

[node name="EastAttackAnimation" type="AnimationPlayer" parent="."]
anims/Attacking = SubResource( 2 )

[node name="NorthAttackAnimation" type="AnimationPlayer" parent="."]
anims/Attacking = SubResource( 3 )

[node name="SouthAttackAnimation" type="AnimationPlayer" parent="."]
anims/Attacking = SubResource( 4 )

[node name="WestAttackAnimation" type="AnimationPlayer" parent="."]
anims/Attacking = SubResource( 5 )
